Sonar cleanup (#1150)
* Local variables should not shadow class fields ( java:S1117 )
* Methods should not have identical implementations ( java:S4144 )
* Java features should be preferred to Guava ( java:S4738 )
* Restricted Identifiers should not be used as Identifiers ( java:S6213 )